--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "axios": "^1.2.0",
     "ethereum-cryptography": "^1.1.2",
+    "ethereumjs-util": "^7.1.5",
     "express": "^4.18.2"
   }
 }
